test/e2e/testdata/templates/httproute-valid/module/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: e2e-app
  namespace: e2e-httproute-valid
  labels:
    app: e2e-app
spec:
  parentRefs:
    - name: e2e-listener-set
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: e2e-svc
          port: 80
